# audit-pipeline-cli

./: .gitignore  AUDIT_FINAL_2026_05_06.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
OUTREACH/: jelleo-colosseum-demo-script.html  jelleo-colosseum-pitch-script.html  jelleo-funding-proposal-short.BACKUP-pre-shrink-2026-05-03.html  jelleo-funding-proposal-short.POLISHED.html  jelleo-funding-proposal-short.html  jelleo-funding-proposal.html  jelleo-one-pager.md  jelleo-ottersec-demo-script.html  jelleo-proposal-glossary.html  sentinel-one-pager.md  sentinel-percolator-report.html
deploy/: README.md  STATUS.md  audit-env-check.sh  audit-env.additions.example  backup_findings_db.sh  bootstrap.sh  dispatch_layer3_strong.py  dispatch_layer3_v2.py  dispatch_layer4_redo.py  dispatch_layer4_v1.py  dispatch_missing_105.py  dispatch_p3_v1.py  generate_status.py  install_systemd.sh  jelleo-alert-failure@.service  jelleo-autoupdate.service  jelleo-autoupdate.sh  jelleo-autoupdate.timer  jelleo-backup.service  jelleo-backup.timer  jelleo-corpus-refresh.service  jelleo-corpus-refresh.timer  jelleo-health.service  jelleo-health.timer  jelleo-heartbeat.service  jelleo-heartbeat.timer  jelleo-scheduler-24h.service  jelleo-scheduler-24h.timer  jelleo-scheduler-monthly.service  jelleo-scheduler-monthly.timer  jelleo-scheduler-weekly.service  jelleo-scheduler-weekly.timer  jelleo-shadow.service  jelleo-snapshot.service  jelleo-snapshot.timer  jelleo-sse.py  jelleo-sse.service  jelleo-token-auth.py  jelleo-token-auth.service  jelleo-watch.service  (+22 more)
deploy/jelleo_chrome/: chrome_bottom.html  chrome_top.html
docs/: BIG_PICTURE_CHECKLIST.md  HYPOTHESIS_SCHEMA.md
docs/api/: openapi.yaml
docs/methodology/: 01-four-pillars.md  02-stride-alignment.md  03-hypothesis-schema.md  04-propagation.md  05-severity-rubric.md  06-lifecycle.md  07-attestation.md  08-reporting.md  09-f7-case-study.md  10-engagement-tiers.md  README.md  bug-class-catalog.md  propagation-howto.md  propagation-runbook.md
examples/: README.md  V1-vault-residual-conservation_response.md  V4-vault-cap-respect_response.md  bounty3_regression_hyps_2026_05_06.yaml  bounty3_regression_hyps_round2.yaml  bounty3_regression_hyps_round3.yaml  diff_hyps_2026_05_06.yaml
examples/adversarial-attempt-2026-05-06/: README.md  test_attack_attempt_2026_05_06.rs  tool_calls.jsonl
examples/confirm-session-2026-05-06/: README.md  SH5-keeper-crank-touching-completeness.cannot_test.txt  SH6-resolve-flat-negative-gate.cannot_test.txt  test_confirm_v1_vault_residual_conservation.rs  test_confirm_v1_vault_residual_conservation.summary.json  test_confirm_v4_vault_cap_respect.rs  test_confirm_v4_vault_cap_respect.summary.json
examples/confirm-session-2026-05-06-followup/: A9-pause-gate-coverage.cannot_test.txt  README.md  test_confirm_a9_pause_gate_coverage.rs  test_confirm_a9_pause_gate_coverage.summary.json  test_confirm_o6_side_flip_atomicity.rs  test_confirm_o6_side_flip_atomicity.summary.json  test_confirm_p8_self_trade_cash_flow.rs  test_confirm_p8_self_trade_cash_flow.summary.json  test_confirm_s5_market_mode_transitions.rs  test_confirm_s5_market_mode_transitions.summary.json  test_confirm_v5_haircut_direction.rs  test_confirm_v5_haircut_direction.summary.json
examples/confirmed-tests/: README.md  test_confirm_o7_position_zero_clears_basis.rs  test_confirm_o7_position_zero_clears_basis.summary.json  test_confirm_o9_position_bedge_correct.rs  test_confirm_o9_position_bedge_correct.summary.json  test_confirm_v4_vault_cap_respect.rs  test_confirm_v4_vault_cap_respect.summary.json
examples/litesvm-attempt-2026-05-06/: README.md  test_litesvm_attack_attempt_2026_05_06.rs  test_litesvm_attack_attempt_2026_05_06.summary.json
examples/litesvm-parallel-attacks-2026-05-06/: README.md  test_catchup_rollback_attack.rs  test_kwalk_matcher_defense.rs  test_liquidate_decoy_defense.rs  test_mark_ewma_dust_defense.rs  test_resolved_reconciliation_drain.rs  test_slot_reuse_defense.rs  test_sweepgap_kdrift_attack.rs  test_tradecpi_zerofill_bypass.rs  test_withdraw_cascade_defense.rs
examples/recent-hunts/: index.json
keys/: jelleo.ed25519.pub
scratch/: diag_l3.py  test_sold10_handfix.t.sol  test_sold1_handfix.t.sol
scripts/: add_engine_function_field.py  adversarial_attack_attempt.py  backfill_bug_class.py  backfill_db_bug_class.py  fix_patch_hunk_counts.py  litesvm_attack_attempt.py  manual_verify_aptos_large.py  merge_aptos_large_hyps.py  merge_aptos_medium_hyps.py  migrate_sqlite_to_postgres.py  polish_aptos_large_verifications.py  smoke_validate_solidity.py  verify_10_final.sh  verify_11_patches.sh  verify_medium_final.sh  verify_small_final.sh
src/audit_pipeline/: __init__.py  anchor_builder.py  anchor_kani_runner.py  anchor_litesvm_runner.py  branding.py  cli.py  customers.py  db.py  db_postgres.py  layer25_triage.py  lifecycle.py  merkle.py  notifier.py  scoping.py  severity.py  source_verifier.py  spend_tracker.py
tests/: test_audit_p0_fixes.py  test_autoupdate.py  test_bundle.py  test_cargo_text.py  test_class_libraries.py  test_cli_basic.py  test_cold_verify.py  test_customer_url_token.py  test_customers.py  test_cycle_command.py  test_dashboard.py  test_db_postgres.py  test_db_resolve_path.py  test_db_schema_version.py  test_debate_independence.py  test_debate_language.py  test_derive_siblings.py  test_diff_aware_hunting.py  test_event_log.py  test_export_scabench.py  test_force_multipliers.py  test_formal_adapters.py  test_freshness_and_watch.py  test_gates_behavior_oracle.py  test_gates_cargo_check.py  test_gates_disclosure_history.py  test_gates_freshness.py  test_gates_post_cycle.py  test_gates_repo_pin.py  test_gates_symbol_grep.py  test_heartbeat.py  test_hook_idempotency.py  test_hunt_helpers.py  test_hunt_multi_language.py  test_hunt_wires_use_tools.py  test_init.py  test_issue_md_safe.py  test_l2_validator.py  test_l2_weak_test_detector.py  test_layer25_triage.py  (+25 more)
website/: index-v1-stable.html
website/deploy/: 404.html  _headers  (+12 more)
(+934 files in other folders)
