[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audit-pipeline"
version = "0.1.0"
description = "CLI orchestrator for the Solana Audit Pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Kirill Sakharuk", email = "noreply@github.com"},
]
keywords = ["solana", "security", "audit", "kani", "formal-verification", "litesvm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "PyYAML>=6.0",
    "Jinja2>=3.1",
    "requests>=2.31",
    "anthropic>=0.40",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
audit-pipeline = "audit_pipeline.cli:main"

[project.urls]
Homepage = "https://github.com/Copenhagen0x/audit-pipeline-cli"
Methodology = "https://github.com/Copenhagen0x/solana-audit-pipeline"
Example = "https://github.com/Copenhagen0x/percolator-audit-2026-04"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
audit_pipeline = [
    "templates/*",
    "templates/**/*",
    "templates/**/**/*",
    "scripts/**/*",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "RET", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
