[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audit-pipeline"
version = "0.1.0"
description = "CLI orchestrator for the Solana Audit Pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Kirill Sakharuk", email = "noreply@github.com"},
]
keywords = ["solana", "security", "audit", "kani", "formal-verification", "litesvm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "PyYAML>=6.0",
    "Jinja2>=3.1",
    "requests>=2.31",
    "anthropic>=0.40",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
audit-pipeline = "audit_pipeline.cli:main"

[project.urls]
Homepage = "https://github.com/Copenhagen0x/audit-pipeline-cli"
Methodology = "https://github.com/Copenhagen0x/solana-audit-pipeline"
Example = "https://github.com/Copenhagen0x/percolator-audit-2026-04"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
audit_pipeline = [
    "templates/*",
    "templates/**/*",
    "templates/**/**/*",
    "scripts/**/*",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "RET", "SIM"]
# Pragmatic ignores: rules that flag stylistic preferences rather than bugs.
# CI gates on bugs (F8xx undefined names, F4xx unused imports, etc.), not on
# naming conventions or refactor suggestions.
ignore = [
    "E501",   # line length — formatter's job
    "B904",   # raise X from Y — adds noise without changing behavior
    "B007",   # unused loop control var — common in for-counter idioms
    "N806",   # non-lowercase var inside function — UPPER for module-style locals
    "N814",   # camelCase imported as constant — yaml as Y, etc.
    "N818",   # Exception names ending in Error — legacy classes already shipped
    "SIM102", # collapsible if — readability call, not always cleaner
    "SIM103", # needless bool — sometimes the explicit return is clearer
    "SIM105", # contextlib.suppress — try/except is more debuggable
    "SIM108", # ternary instead of if/else — readability call
    "SIM115", # context manager for open — fine when paired with explicit close
    "E741",   # ambiguous variable name (single-char l/I/O) — limited surface
    "F841",   # unused variable — sometimes intentional for typing/destructure
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
